--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=jwt
 
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
+
+spring.security.user.password=pass
