--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=jwt
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
 
-api.security.token.secret= ?
-
+api.security.token.secret=my-secret
 frontend.port="http://localhost:8090"
